<resources>
    <string name="app_name">PixelDroid</string>
    <string name="menu_account">My Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="invalid_domain">"Invalid domain"</string>
    <string name="registration_failed">"Could not register the application with this server"</string>
    <string name="browser_launch_failed">"Could not launch a browser, do you have one?"</string>
    <string name="auth_failed">"Could not authenticate"</string>
    <string name="verify_credentials">"Could not get user information"</string>
    <string name="token_error">"Error getting token"</string>
    <string name="instance_error">"Could not get instance information"</string>
    <string name="instance_not_pixelfed_warning">"This doesn't seem to be a Pixelfed instance, so the app could break in unexpected ways."</string>
    <string name="instance_not_pixelfed_continue">"OK, continue anyway"</string>
    <string name="instance_not_pixelfed_cancel">"Cancel logging in"</string>
    <string name="title_activity_settings2">Settings</string>
    <string name="theme_title">Application Theme</string>
    <string name="theme_header">Theme</string>
    <string name="default_system">Default (Follows system)</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="dark_amoled_theme">\"True\" Dark (AMOLED) (experimental)</string>
    <string name="always_show_nsfw">Always show sensitive content</string>
    <string name="followed_notification">%1$s followed you</string>
    <string name="mention_notification">%1$s mentioned you</string>
    <string name="shared_notification">%1$s shared your post</string>
    <string name="liked_notification">%1$s liked your post</string>
    <string name="comment_notification">%1$s commented on your post</string>
    <string name="poll_notification">"%1$s's poll has ended"</string>
    <string name="other_notification">"Notification from %1$s"</string>
    <string name="followed_notification_channel">"New followers"</string>
    <string name="mention_notification_channel">"Mentions"</string>
    <string name="shared_notification_channel">"Shares"</string>
    <string name="liked_notification_channel">"Likes"</string>
    <string name="comment_notification_channel">"Comments"</string>
    <string name="poll_notification_channel">"Polls"</string>
    <string name="other_notification_channel">"Other"</string>
    <plurals name="notification_title_summary">
        <item quantity="one">"%d new notification"</item>
        <item quantity="other">"%d new notifications"</item>
    </plurals>
    <string name="notification_summary_large">%1$s, %2$s, %3$s and %4$d others</string>
    <string name="notification_summary_medium">%1$s, %2$s, and %3$s</string>
    <string name="notification_summary_small">%1$s and %2$s</string>
    <string name="whats_an_instance">"What's an instance?"</string>
    <string name="whats_an_instance_explanation">"You might be confused by the text field asking for the domain of your 'instance'.

Pixelfed is a federated platform, and part of the 'fediverse', which means it can talk to other platforms which speak the same language, like Mastodon (see https://joinmastodon.org).

It also means you have to choose which server, or 'instance' of Pixelfed to use. If you don't know any, you can look here: https://pixelfed.org/join

For more info about Pixelfed, you can check here: https://pixelfed.org"</string>
    <string name="domain_of_your_instance">Domain of your instance</string>
    <string name="connect_to_pixelfed">Connect to Pixelfed</string>
    <string name="login_connection_required_once">You need to be online to be able to add the first account and use PixelDroid :(</string>
    <string name="api_not_enabled_dialog">The API is not activated on this instance. Contact your administrator to ask them to activate it.</string>
    <string name="logout">Log out</string>
    <string name="add_account_name">Add Account</string>
    <string name="add_account_description">Add another Pixelfed Account</string>
    <plurals name="description_max_characters">
        <item quantity="one">"Description must contain %d character at most."</item>
        <item quantity="other">"Description must contain %d characters at most."</item>
    </plurals>
    <string name="upload_picture_failed">Picture upload error!</string>
    <string name="picture_format_error">Upload error: wrong picture format.</string>
    <string name="request_format_error">Upload error: bad request format</string>
    <string name="upload_post_failed">Post upload failed</string>
    <string name="upload_post_success">Post uploaded successfully</string>
    <string name="upload_post_error">Post upload error</string>
    <string name="description">Description…</string>
    <string name="post">Post</string>
    <string name="upload_next_step">Next step</string>
    <string name="add_details">Add some details</string>
    <string name="add_photo">Add a photo</string>
    <string name="post_image">One of the images in the post</string>
    <string name="switch_to_grid">Switch to grid view</string>
    <string name="switch_to_carousel">Switch to carousel</string>
    <string name="save_image_description">Save image description</string>
    <string name="no_media_description">Add a media description here…</string>
    <string name="total_exceeds_album_limit">You chose more images than the maximum your server allows (%1$s). Images beyond the limit have been ignored.</string>
    <string name="size_exceeds_instance_limit">Size of image number %1$d in the album exceeds the maximum size allowed by the instance (%2$d kB but the limit is %3$d kB). You might not be able to upload it.</string>
    <string name="video_not_supported">"The server you are using doesn't support video uploads, you might not be able to upload videos included in this post"</string>
    <string name="upload_error">Error code returned by server: %1$d</string>
    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="loading_toast">Something went wrong while loading</string>
    <string name="feed_failed">Could not get feed</string>
    <string name="unknown_error_in_error">Unknown error, check if server is down: %1$s</string>
    <string name="share_picture">Share picture…</string>
    <string name="save_to_gallery">Save to Gallery…</string>
    <string name="image_download_failed">Download has failed, please try again</string>
    <string name="image_download_downloading">Downloading…</string>
    <string name="image_download_success">Image downloaded successfully</string>
    <plurals name="items_load_success">
        <item quantity="one">%d item loaded successfully</item>
        <item quantity="other">%d items loaded successfully</item>
    </plurals>
    <string name="no_description">No description</string>
    <plurals name="likes">
        <item quantity="one">%d Like</item>
        <item quantity="other">%d Likes</item>
    </plurals>
    <plurals name="shares">
        <item quantity="one">%d Share</item>
        <item quantity="other">%d Shares</item>
    </plurals>
    <string name="posted_on">"Posted on %1$s"</string>
    <string name="NoCommentsToShow">No comments on this post…</string>
    <string name="empty_comment">Comment must not be empty!</string>
    <string name="write_permission_download_pic">You need to grant write permission to download pictures!</string>
    <string name="share_image">Share Image</string>
    <string name="comment_error">Comment error!</string>
    <string name="comment_posted">"Comment: %1$s posted!"</string>
    <string name="comment_verb">Comment</string>
    <string name="comment_noun">Comment</string>
    <plurals name="number_comments">
        <item quantity="one">%d comment</item>
        <item quantity="other">%d comments</item>
    </plurals>
    <string name="add_comment">Add a comment</string>
    <string name="submit_comment">Submit comment</string>
    <string name="post_is_album">This post is an album</string>
    <string name="post_is_video">This post is a video</string>
    <plurals name="nb_posts">
        <item quantity="one">"%d\nPost"</item>
        <item quantity="other">"%d\nPosts"</item>
    </plurals>
    <plurals name="nb_followers">
        <item quantity="one">"%d\nFollower"</item>
        <item quantity="other">"%d\nFollowers"</item>
    </plurals>
    <plurals name="nb_following">
        <item quantity="one">"%d\nFollowing"</item>
        <item quantity="other">"%d\nFollowing"</item>
    </plurals>
    <string name="edit">Edit</string>
    <string name="save_image_failed">Unable to save</string>
    <string name="save_image_success">Saved successfully</string>
    <string name="follow_status_failed">Could not get follow status</string>
    <string name="edit_link_failed">Failed to open edit page</string>
    <string name="new_collection_link_failed">Failed to open collection creation page</string>
    <string name="empty_feed">Nothing to see here :(</string>
    <string name="follow_button_failed">Could not display follow button</string>
    <string name="follow_error">Could not follow</string>
    <string name="action_not_allowed">This action is not allowed</string>
    <string name="unfollow_error">Could not unfollow</string>
    <string name="access_token_invalid">The access token is invalid</string>
    <string name="default_nposts">-\nPosts</string>
    <string name="default_nfollowers">-\nFollowers</string>
    <string name="default_nfollowing">-\nFollowing</string>
    <string name="about_pixeldroid">About PixelDroid</string>
    <string name="dependencies_licenses">Dependencies and licenses</string>
    <string name="project_website">Project website: https://pixeldroid.org</string>
    <string name="license_info">PixelDroid is free and open source software, licensed under the GNU General Public License (version 3 or later)</string>
    <string name="about">About</string>
    <string name="report">Report</string>
    <string name="share_link">Share Link</string>
    <string name="profile_picture">Profile picture</string>
    <string name="delete">Delete</string>
    <string name="language">Language</string>
    <string name="help_translate">Help translate PixelDroid to your language:</string>
    <string name="issues_contribute">Report issues or contribute to the application:</string>
    <string name="notifications_settings">Notification settings</string>
    <string name="notifications_settings_summary">Manage what notifications you want to receive</string>
    <string name="play_video">Play video</string>
    <string name="home_feed">Home</string>
    <string name="search_discover_feed">Search</string>
    <string name="create_feed">Create</string>
    <string name="notifications_feed">Updates</string>
    <string name="public_feed">Public</string>
    <string name="accentColorTitle">Color accent</string>
    <string name="accentColorSummary">Choose a color accent</string>
    <string name="description_template_summary">"Prefill new posts' description with this"</string>
    <string name="description_template">Description template</string>
    <string name="summary_always_show_nsfw">NSFW/CW posts will not be blurred, and will be shown by default.</string>
    <string name="story_image">Story image</string>
    <string name="type_story">Story</string>
    <string name="type_post">Post</string>
    <string name="continue_post_creation">Continue</string>
    <string name="arrange_tabs_summary">Arrange tabs</string>
    <string name="arrange_tabs_description">Change visibility and order of tabs</string>
    <string name="content_header">Content</string>
    <string name="tutorial">Tutorial</string>
    <string name="tutorial_explanation">Explanations on how to use PixelDroid and Pixelfed</string>
</resources>