<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings"
            android:icon="@drawable/ic_settings"/>
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout" />
        <item
            android:id="@+id/darkModeToggle"
            android:title="Dark Mode"
            app:actionLayout="@layout/switch_item" />
    </group>
</menu>
